[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/

authors = [
    {name = "Bharath Achyutha Rao", email = "bharath.rao@hotmail.com"},
]

name = "actee"
version = "1.3.5"
description = "Autonomous agent for task/action planning and execution"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "apache-airflow",
    "pendulum",
    "networkx",
]

[project.urls]
"Homepage" = "https://github.com/bharathra/actee"
"Bug Tracker" = "https://github.com/bharathra/actee/issues"

[project.optional-dependencies]

[tool.pdm]
includes = ["actee"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.5",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
